fixes bug 114125 "nsStandardURL::Clone fails to clone the nsIFile if one exists" r=dougt,sr=sfraser